--- a/place.html
+++ b/place.html
@@ -19,6 +19,9 @@
     padding-top: 25%;
 padding-left: 50%;
 }
+	    body {
+	    display: none;
+	    }
     </style>
     <head><title>اماكن العناصر</title></head>
 <div class="ah"><a href="https://www.flexcourses.com">click</a></div>
